--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -42,7 +42,7 @@ bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monito
 bind = $mainMod, O, exec, obsidian
 bind = $mainMod, I, exec, iwgtk
 bind = $mainMod, B, exec, /opt/datagrip/bin/datagrip.sh
-
+bind = $mainMod, P, exec, postman
 
 # Rofi menus
 bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
