--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,7 +73,7 @@ env = GDK_SCALE,1
 # See https://wiki.hyprland.org/Configuring/Variables/
 
 input {
-    kb_layout = es
+    kb_layout = latam
     follow_mouse = 1
 
     touchpad {
