--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,11 +19,22 @@ $scrPath = $HOME/.local/share/bin # set scripts path
 #monitor = ,2560x1600@240,auto,auto
 
 # Monitor interno
-monitor = eDP-2,2560x1600@240,auto,auto
+monitor = eDP-2,1920x1200@165,0x0,1
 
 # Monitor externo
-monitor = HDMI-A-1,1920x1080@60,auto,auto
+monitor = HDMI-A-1,1920x1080@60,0x0,1,mirror, eDP-2
 
+workspace = 1, eDP-2
+workspace = 2, eDP-2
+workspace = 3, eDP-2
+workspace = 4, eDP-2
+workspace = 5, eDP-2
+
+workspace = 6, HDMI-A-1
+workspace = 7, HDMI-A-1
+workspace = 8, HDMI-A-1
+workspace = 9, HDMI-A-1
+workspace = 10, HDMI-A-1
 
 #monitor = eDP-2,auto,0x0,1
 #monitor = HDMI-A-1,auto,1920x0,1
