--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -29,6 +29,11 @@ bind = $mainMod, Escape, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 
 
+bind = $mainMod+Ctrl+SHIFT, RIGHT, movecurrentworkspacetomonitor, +1
+bind = $mainMod+Ctrl+SHIFT, LEFT, movecurrentworkspacetomonitor, -1
+bind = $mainMod+Shift+Alt, LEFT, focusmonitor , l
+bind = $mainMod+Shift+Alt, RIGHT, focusmonitor , r
+
 # Application shortcuts
 bind = $mainMod, N, exec, notion-app
 bind = $mainMod+Shift, N, exec, notion-calendar-electron
